# aicup-madcars

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pack-version.sh
src/: CMakeLists.txt  Makefile
src/chipmunk_src/include/chipmunk/: chipmunk.h
src/solution/: main.cpp  math_utils.h  rotation.h  structures.cpp  structures.h  vec2.h
src/solution/common/: RewindClient.h  json.h  logger.h  vis_debug.cpp  vis_debug.h
src/solution/logic/: evaluator.cpp  evaluator.h  fastrand.h  montecarlo.cpp  montecarlo.h  strategy.cpp  strategy.h
src/solution/simulation/: cp_helpers.cpp  cp_helpers.h  simulator.cpp  simulator.h
